--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
                 <li><a href="login.html">Log In</a></li>
               </ul>
               <div class="user-icon-container">
-                <button class="user-button">
+                <button class="user-button" onclick="window.location.href = 'profile.html';">
                     <img src="images/usericon.png" alt="User Icon" id="icon" class="user">
                 </button>
             </div>
