ALL PROFILE CHANGES
Added Logos, and view establishment, and changed reviews of other-profile

--- a/other-profile.html
+++ b/other-profile.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-
+        <img class ="logo" src="Cafe St Logo.PNG">
         <img class = "designdot4" src="images/dots.png">
 
         <div class="logo-name">
@@ -19,9 +19,9 @@
         </div>
         <ul>
             <li id="home-link"><a href="homepage.html">Home</a></li>
-
-            <li><a href="login.html">Register</a></li>
+            <li><a href="review.html">View Establishments</a></li>
             <li><a href="login.html">Log In</a></li>
+            
         </ul>
         <div class="user-icon-container">
             <button class="user-button">
@@ -70,13 +70,12 @@
 
         <div id="profile-reviews-set1" class="profile-reviews" data-visible="true">
             <div class="review1-container">
-                <img src="images/preludelogo.jpg" class="prelude">
+                <img src="images/dripkofilogo.jpg" class="review1">
 
                 <div class="review1-review">
                     <br>
-                    <span class="review-title">"Just for Instagram"</span><br><br>
-                    <span class="review-text">The interior design, the food, and the drinks are all pleasing to the eye
-                        but it's quite overpriced.</span>
+                    <span class="review-title">"A Recommendation From A Friend"</span><br><br>
+                    <span class="review-text">I heard that their Vietnamese coffee and Spanish latte are very good. I wasn't disappointed</span>
 
                     <div class="star-rating" id="review1-rating">
                         <span class="star">&#9733;</span>
@@ -90,13 +89,12 @@
             </div>
 
             <div class="review2-container">
-                <img src="images/dripkofilogo.jpg" class="dripkofi">
+                <img src="images/obsecurelogo.jpg" class="review2">
 
                 <div class="review2-review">
                     <br>
-                    <span class="review-title">"I Love Egg Coffee"</span><br><br>
-                    <span class="review-text">Their egg coffee tastes similar to the one in Vietnam, it's my new
-                        favorite !</span>
+                    <span class="review-title">"No Coffee Connoisseur"</span><br><br>
+                    <span class="review-text">With its rich, velvety texture and hints of dark chocolate and caramel, this coffee delivers a bold and satisfying experience that lingers long after the last sip.</span>
 
                     <div class="star-rating" id="review2-rating">
                         <span class="star">&#9733;</span>
@@ -109,13 +107,12 @@
             </div>
 
             <div class="review3-container">
-                <img src="images/sblogo.jpg" class="starbucks">
+                <img src="images/cloudscapelogo.jpg" class="review3">
 
                 <div class="review3-review">
                     <br>
-                    <span class="review-title">"Overrated."</span><br><br>
-                    <span class="review-text">Starbucks is really good at marketing, maybe the best in the world.
-                        However, their coffee tastes burnt to me, roasting in such large quantities ensures that.</span>
+                    <span class="review-title">"Kewl!"</span><br><br>
+                    <span class="review-text">I don't really drink coffee. But I like to hangout here with my friends while we wait for our next class.</span>
 
                     <div class="star-rating" id="review3-rating">
                         <span class="star">&#9733;</span>
@@ -132,12 +129,12 @@
          <!-- Second Page -->
          <div id="profile-reviews-set2" class="profile-reviews" data-visible="false">
             <div class="review1-container">
-                <img src="images/obsecurelogo.jpg" class="prelude">
+                <img src="images/tomologo.jpg" class="review1">
 
                 <div class="review1-review">
                     <br>
                     <span class="review-title">"Loyal Customer"</span><br><br>
-                    <span class="review-text">My friend introduced me to this cafe. 2 years later, this has been my spot whenever I work on my academics.</span>
+                    <span class="review-text">Whenever I pass by this TOMO, the line is always so long, so I got curious and tried it. And I get it now.</span>
 
                     <div class="star-rating" id="review1-rating">
                         <span class="star">&#9733;</span>
@@ -152,12 +149,12 @@
 
            
             <div class="review2-container">
-                <img src="images/tomologo.jpg" class="dripkofi">
+                <img src="images/preludelogo.jpg" class="review2">
 
                 <div class="review2-review">
                     <br>
-                    <span class="review-title">"10/10"</span><br><br>
-                    <span class="review-text">Their coffee is so good ! It's not your usual commercial uber-sweet coffee It's real coffee, 5-stars.</span>
+                    <span class="review-title">"Very Accessible"</span><br><br>
+                    <span class="review-text">It's literally just beside Goks, very convenient! Menu is fine.</span>
 
                     <div class="star-rating" id="review2-rating">
                         <span class="star">&#9733;</span>
