--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,7 @@
 <body>
     <div class="header">
 
+        <img class="logo" src="Cafe St Logo.PNG">
         <img class = "designdot4" src="images/dots.png">
 
         <div class="logo-name">
@@ -19,7 +20,7 @@
         </div>
         <ul>
             <li id="home-link"><a href="homepage.html">Home</a></li>
-
+            <li><a href="review.html">View Establishments</a></li>
             <li><a href="login.html">Log In</a></li>
         </ul>
         <div class="user-icon-container">
@@ -92,7 +93,7 @@
 
         <div id="profile-reviews-set1" class="profile-reviews" data-visible="true">
             <div class="review1-container">
-                <img src="images/preludelogo.jpg" class="prelude">
+                <img src="images/preludelogo.jpg" class="review1">
 
                 <div class="review1-review">
                     <br>
@@ -112,7 +113,7 @@
             </div>
 
             <div class="review2-container">
-                <img src="images/dripkofilogo.jpg" class="dripkofi">
+                <img src="images/dripkofilogo.jpg" class="review2">
 
                 <div class="review2-review">
                     <br>
@@ -131,7 +132,7 @@
             </div>
 
             <div class="review3-container">
-                <img src="images/sblogo.jpg" class="starbucks">
+                <img src="images/sblogo.jpg" class="review3">
 
                 <div class="review3-review">
                     <br>
@@ -154,7 +155,7 @@
          <!-- Second Page -->
          <div id="profile-reviews-set2" class="profile-reviews" data-visible="false">
             <div class="review1-container">
-                <img src="images/obsecurelogo.jpg" class="prelude">
+                <img src="images/obsecurelogo.jpg" class="review1">
 
                 <div class="review1-review">
                     <br>
@@ -174,7 +175,7 @@
 
            
             <div class="review2-container">
-                <img src="images/tomologo.jpg" class="dripkofi">
+                <img src="images/tomologo.jpg" class="review2">
 
                 <div class="review2-review">
                     <br>
