--- a/other-profile.html
+++ b/other-profile.html
@@ -10,11 +10,10 @@
 
 <body>
     <div class="header">
-        <img class ="logo" src="Cafe St Logo.PNG">
+        <img class ="logo" src="images/Logo.png">
         <img class = "designdot4" src="images/dots.png">
 
         <div class="logo-name">
-            <!--<img src="Cafe St Logo.PNG" class="logo"> -->
             <p class="web-name"><span class="Cafe-title">Cafe</span> <span class="St.-title">St.</span></p>
         </div>
         <ul>
