--- a/profile.html
+++ b/profile.html
@@ -11,11 +11,10 @@
 <body>
     <div class="header">
 
-        <img class="logo" src="Cafe St Logo.PNG">
+        <img class="logo" src="images/Logo.png">
         <img class = "designdot4" src="images/dots.png">
 
         <div class="logo-name">
-            <!--<img src="Cafe St Logo.PNG" class="logo"> -->
             <p class="web-name"><span class="Cafe-title">Cafe</span> <span class="St.-title">St.</span></p>
         </div>
         <ul>
@@ -227,28 +226,28 @@
 
         window.addEventListener('resize', adjustCoverImage);
 
-        // Function to open the edit popup
+     
         function openEditPopup() {
             var editPopup = document.getElementById('editPopup');
             editPopup.style.display = 'block';
         }
 
 
-        // Function to close the edit popup
+
         function closeEditPopup() {
             var editPopup = document.getElementById('editPopup');
             editPopup.style.display = 'none';
         }
 
-        // Function to save changes from the edit popup
+   
         function saveChanges() {
             var newUsername = document.getElementById('newUsername').value;
             var newRealname = document.getElementById('newRealname').value;
             var newBio = document.getElementById('newBio').value;
 
-            // Update profile information here (e.g., send data to server)
+         
 
-            // Close the popup after saving changes
+
             closeEditPopup();
         }
 
