--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,9 @@
         </ul>
         <div class="user-icon-container">
             <button class="user-button">
-                <img src="images/usericon.png" alt="User Icon" class="user">
+                <a href="other-profile.html">
+                    <img src="images/usericon.png" alt="User Icon" class="user">
+                </a>
             </button>
         </div>
     </div>
