--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
                 <li><a href="login.html">Log In</a></li>
               </ul>
               <div class="user-icon-container">
-                <button class="user-button" onclick="window.location.href = 'profile.html';">
+                <button class="user-button">
                     <img src="images/usericon.png" alt="User Icon" id="icon" class="user">
                 </button>
             </div>
@@ -125,13 +125,13 @@
                         </p>
                     </div>
                 </button>
-                <a class="view-establishment-sb" href="#">View Establishment</a>
+                <a class="view-establishment-sb" href="review.html">View Establishment</a>
                 <div id="popupsb" class="popupsb">
                     <div class="sbcontent">
                         <div class = "uppersidesb">
                             <div class="logo-popup">
                                 <img src="images/sblogo.jpg" alt="Logo">
-                                <a class = "view-all" href="#">View All</a>
+                                <a class = "view-all" href="review.html">View All</a>
                                 </div>
                             <div class="infos-popup">
                                 <div class="name-popup"><a class="sb" href="#">Starbucks Greencourt Manila</a></div>
@@ -146,7 +146,7 @@
                             <hr>
                             <div class="topreview-container">
                                 <p class="topreview">Top Review</p>
-                                <a class="write" href="#">Write a Review</a>
+                                <a class="write" href="review.html">Write a Review</a>
                             </div>
                             <div class = "comment-container"> 
                                 <img src="images/dog.jpg" class="user-icon">
@@ -234,13 +234,13 @@
                         </p>
                     </div>
                 </button>
-                <a class="view-establishment-tomo" href="#">View Establishment</a>
+                <a class="view-establishment-tomo" href="review.html">View Establishment</a>
                 <div id="popuptomo" class="popuptomo">
                     <div class="tomocontent">
                         <div class = "uppersidetomo">
                             <div class="logo-popup">
                                 <img src="images/tomologo.jpg" alt="Logo">
-                                <a class = "view-all" href="#">View All</a>
+                                <a class = "view-all" href="review.html">View All</a>
                             </div>
                             <div class="infos-popup">
                                 <div class="tomo-popup"><a class="name" href="#">TOMO Coffee</a></div>
@@ -255,7 +255,7 @@
                             <hr>
                             <div class="topreview-container">
                                 <p class="topreview">Top Review</p>
-                                <a class="write" href="#">Write a Review</a>
+                                <a class="write" href="review.html">Write a Review</a>
                             </div>
                             <div class = "comment-container"> 
                                 <img src="images/dog.jpg" class="user-icon">
@@ -333,13 +333,13 @@
                             </p>
                     </div>
                 </button> 
-                <a class="view-establishment" href="#">View Establishment</a>
+                <a class="view-establishment" href="review.html">View Establishment</a>
                 <div id="popupprelude" class="popupprelude">
                     <div class="preludecontent">
                         <div class = "upperside">
                             <div class="logo-popup">
                                 <img src="images/preludelogo.jpg" alt="Logo">
-                                <a class = "view-all" href="#">View All</a>
+                                <a class = "view-all" href="review.html">View All</a>
                             </div>
                             <div class="infos-popup">
                                 <div class="prelude"><a class="name" href="#">Prelude Cafe and Restaurant</a></div>
@@ -354,7 +354,7 @@
                             <hr>
                             <div class="topreview-container">
                                 <p class="topreview">Top Review</p>
-                                <a class="write" href="#">Write a Review</a>
+                                <a class="write" href="review.html">Write a Review</a>
                             </div>
                             <div class = "comment-container"> 
                                 <img src="images/dog.jpg" class="user-icon">
@@ -435,13 +435,13 @@
                                 </p>
                         </div>
                     </button> 
-                    <a class="view-establishment" href="#">View Establishment</a>                   
+                    <a class="view-establishment" href="review.html">View Establishment</a>                   
                     <div id="popupprelude" class="popupprelude">
                         <div class="preludecontent">
                             <div class = "upperside">
                                 <div class="logo-popup">
                                     <img src="images/preludelogo.jpg" alt="Logo">
-                                    <a class = "view-all" href="#">View All</a>
+                                    <a class = "view-all" href="review.html">View All</a>
                                   </div>
                                   <div class="infos-popup">
                                     <div class="name-popup"><a class="name" href="#">Prelude Cafe and Restaurant</a></div>
@@ -456,7 +456,7 @@
                                 <hr>
                                 <div class="topreview-container">
                                     <p class="topreview">Top Review</p>
-                                    <a class="write" href="#">Write a Review</a>
+                                    <a class="write" href="review.html">Write a Review</a>
                                 </div>
                                 <div class = "comment-container"> 
                                     <img src="images/dog.jpg" class="user-icon">
@@ -536,7 +536,7 @@
                             <div class = "uppersidedrip">
                                 <div class="logo-popup">
                                     <img src="images/dripkofilogo.jpg" alt="Logo">
-                                    <a class = "view-all" href="#">View All</a>
+                                    <a class = "view-all" href="review.html">View All</a>
                                   </div>
                                   <div class="infos-popup">
                                     <div class="name-popup"><a class="name" href="#">Drip Kofi</a></div>
@@ -551,7 +551,7 @@
                                 <hr>
                                 <div class="topreview-container">
                                     <p class="topreview">Top Review</p>
-                                    <a class="write" href="#">Write a Review</a>
+                                    <a class="write" href="review.html">Write a Review</a>
                                 </div>
                                 <div class = "comment-container"> 
                                     <img src="images/dog.jpg" class="user-icon">
@@ -639,13 +639,13 @@
                             </p>
                         </div>
                     </div>
-                    <a class="view-establishment-obsecure" href="#">View Establishment</a>
+                    <a class="view-establishment-obsecure" href="review.html">View Establishment</a>
                     <div id="popupobsecure" class="popupobsecure">
                         <div class="obsecurecontent">
                             <div class = "uppersideobsecure">
                                 <div class="logo-popup">
                                     <img src="images/obsecurelogo.jpg" alt="Logo">
-                                    <a class = "view-all" href="#">View All</a>
+                                    <a class = "view-all" href="review.html">View All</a>
                                   </div>
                                   <div class="infos-popup">
                                     <div class="name-popup"><a class="name" href="#">Obsecure Cafe'</a></div>
@@ -660,7 +660,7 @@
                                 <hr>
                                 <div class="topreview-container">
                                     <p class="topreview">Top Review</p>
-                                    <a class="write" href="#">Write a Review</a>
+                                    <a class="write" href="review.html">Write a Review</a>
                                 </div>
                                 <div class = "comment-container"> 
                                     <img src="images/dog.jpg" class="user-icon">
@@ -744,13 +744,13 @@
                             </p>
                         </div>
                     </div>
-                    <a class="view-establishment-tomo" href="#">View Establishment</a>
+                    <a class="view-establishment-tomo" href="review.html">View Establishment</a>
                     <div id="popuptomo" class="popuptomo">
                         <div class="tomocontent">
                             <div class = "uppersidetomo">
                                 <div class="logo-popup">
                                     <img src="images/tomologo.jpg" alt="Logo">
-                                    <a class = "view-all" href="#">View All</a>
+                                    <a class = "view-all" href="review.html">View All</a>
                                   </div>
                                   <div class="infos-popup">
                                     <div class="name-popup"><a class="name" href="#">TOMO Coffee</a></div>
@@ -765,7 +765,7 @@
                                 <hr>
                                 <div class="topreview-container">
                                     <p class="topreview">Top Review</p>
-                                    <a class="write" href="#">Write a Review</a>
+                                    <a class="write" href="review.html">Write a Review</a>
                                 </div>
                                 <div class = "comment-container"> 
                                     <img src="images/dog.jpg" class="user-icon">
@@ -858,13 +858,13 @@
                                 </p>
                             </div>
                         </div>
-                        <a class="view-establishment-cloudscape" href="#">View Establishment</a>
+                        <a class="view-establishment-cloudscape" href="review.html">View Establishment</a>
                         <div id="popupcloudscape" class="popupcloudscape">
                             <div class="cloudscapecontent">
                                 <div class = "uppersidecloudscape">
                                     <div class="logo-popup">
                                         <img src="images/cloudscapelogo.jpg" alt="Logo">
-                                        <a class = "view-all" href="#">View All</a>
+                                        <a class = "view-all" href="review.html">View All</a>
                                       </div>
                                       <div class="infos-popup">
                                         <div class="name-popup"><a class="name" href="#">Cloudscape</a></div>
@@ -879,7 +879,7 @@
                                     <hr>
                                     <div class="topreview-container">
                                         <p class="topreview">Top Review</p>
-                                        <a class="write" href="#">Write a Review</a>
+                                        <a class="write" href="review.html">Write a Review</a>
                                     </div>
                                     <div class = "comment-container"> 
                                         <img src="images/dog.jpg" class="user-icon">
@@ -952,13 +952,13 @@
                                 </p>
                             </div>
                         </div>
-                        <a class="view-establishment-obsecure" href="#">View Establishment</a>
+                        <a class="view-establishment-obsecure" href="review.html">View Establishment</a>
                         <div id="popupobsecure" class="popupobsecure">
                             <div class="obsecurecontent">
                                 <div class = "uppersideobsecure">
                                     <div class="logo-popup">
                                         <img src="images/obsecurelogo.jpg" alt="Logo">
-                                        <a class = "view-all" href="#">View All</a>
+                                        <a class = "view-all" href="review.html">View All</a>
                                       </div>
                                       <div class="infos-popup">
                                         <div class="name-popup"><a class="name" href="#">Obsecure Cafe'</a></div>
@@ -974,7 +974,7 @@
                                     <hr>
                                     <div class="topreview-container">
                                         <p class="topreview">Top Review</p>
-                                        <a class="write" href="#">Write a Review</a>
+                                        <a class="write" href="review.html">Write a Review</a>
                                     </div>
                                     <div class = "comment-container"> 
                                         <img src="images/dog.jpg" class="user-icon">
@@ -1019,13 +1019,13 @@
                                 </p>
                             </div>
                         </div>
-                        <a class="view-establishment-drip" href="#">View Establishment</a>
+                        <a class="view-establishment-drip" href="review.html">View Establishment</a>
                         <div id="popupdrip" class="popupdrip">
                             <div class="dripcontent">
                                 <div class = "uppersidedrip">
                                     <div class="logo-popup">
                                         <img src="images/dripkofilogo.jpg" alt="Logo">
-                                        <a class = "view-all" href="#">View All</a>
+                                        <a class = "view-all" href="review.html">View All</a>
                                       </div>
                                       <div class="infos-popup">
                                         <div class="name-popup"><a class="name" href="#">Drip Kofi</a></div>
@@ -1040,7 +1040,7 @@
                                     <hr>
                                     <div class="topreview-container">
                                         <p class="topreview">Top Review</p>
-                                        <a class="write" href="#">Write a Review</a>
+                                        <a class="write" href="review.html">Write a Review</a>
                                     </div>
                                     <div class = "comment-container"> 
                                         <img src="images/dog.jpg" class="user-icon">
