--- a/review.html
+++ b/review.html
@@ -15,8 +15,7 @@
                 <p class="web-name"><span class="Cafe-title">Cafe</span> <span class="St-title">St.</span></p>
             </a>
             <ul>
-                <li id="home-link"><a href="#">Home</a></li>
-                <li><a href="#">Register</a></li>
+                <li id="home-link"><a href="homepage.html">Home</a></li>
                 <li><a href="login.html">Log In</a></li>
             </ul>
             <div class="user-icon-container">
