--- a/homepage.html
+++ b/homepage.html
@@ -36,7 +36,9 @@
               </ul>
               <div class="user-icon-container">
                 <button class="user-button">
+                    <a href="profile.html">
                     <img src="images/usericon.png" alt="User Icon" id="icon" class="user">
+                    </a>
                 </button>
             </div>
         </div>
