review to profile

--- a/review.html
+++ b/review.html
@@ -20,7 +20,9 @@
             </ul>
             <div class="user-icon-container">
                 <button class="user-button">
+                    <a href="profile.html">
                     <img src="userProfile.png" alt="User Icon" id="icon" class="user">
+                    </a>
                 </button>
             </div>
         </div>
