--- a/profile.html
+++ b/profile.html
@@ -18,8 +18,8 @@
             <p class="web-name"><span class="Cafe-title">Cafe</span> <span class="St.-title">St.</span></p>
         </div>
         <ul>
-            <li id="home-link"><a href="homepage.html">Home</a></li>
-            <li><a href="review.html">View Establishments</a></li>
+            <li id="home-link"><a href="index.html">Home</a></li>
+            <li><a href="view-establishments.html">View Establishments</a></li>
             <li><a href="login.html">Log In</a></li>
         </ul>
         <div class="user-icon-container">
