--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
         </div>
         <p class = "top">Top Rated Cafes &#11088;</p>
-        <p class="rated">The top bets of many students</p>
+        <p class="rated">The top bets of students around Taft</p>
         <div class = "toprated">
             <div class="top1container">
                 <button id="view-sb" class="top1header" onclick="showSummarysb()">
@@ -136,8 +136,8 @@
                                 <a class = "view-all" href="view-establishments.html">View All</a>
                                 </div>
                             <div class="infos-popup">
-                                <div class="name-popup"><a class="sb" href="#">Starbucks Greencourt Manila</a></div>
-                                <div class="loc-popup"><a class="greencourt" href="https://www.google.com/maps/place/Starbucks+Green+Court+Manila/@14.5665579,120.9922941,20.88z/data=!4m19!1m12!4m11!1m6!1m2!1s0x3397c97920dbe19b:0x22b56bd8c78c9326!2sStarbucks,+D'+Students'+Place+Bldg.,+Taft+Ave,+corner+Estrada+St,+Malate,+Manila!2m2!1d120.9946074!2d14.564226!1m3!2m2!1d120.9807968!2d14.5896002!3m5!1s0x3397c97f41655759:0x545cbb149161275b!8m2!3d14.5666479!4d120.9922586!16s%2Fg%2F1ptwy9zrl?entry=ttu">
+                                <div class="name-popup"><a class="name" href="#">Starbucks Greencourt Manila</a></div>
+                                <div class="loc-popup"><a class="loc" href="https://www.google.com/maps/place/Starbucks+Green+Court+Manila/@14.5665579,120.9922941,20.88z/data=!4m19!1m12!4m11!1m6!1m2!1s0x3397c97920dbe19b:0x22b56bd8c78c9326!2sStarbucks,+D'+Students'+Place+Bldg.,+Taft+Ave,+corner+Estrada+St,+Malate,+Manila!2m2!1d120.9946074!2d14.564226!1m3!2m2!1d120.9807968!2d14.5896002!3m5!1s0x3397c97f41655759:0x545cbb149161275b!8m2!3d14.5666479!4d120.9922586!16s%2Fg%2F1ptwy9zrl?entry=ttu">
                                 Fidel A.Reyes, Malate, Manila, 1004 Metro Manila</a></div>
                             </div>
                         </div>
@@ -320,12 +320,12 @@
             </div>
             <div class="top3container">
                 <button id="view" class="cafe1header"  onclick="showSummary()">
-                    <div class="logo">
+                    <div class="logo-pre">
                         <img src="images/preludelogo.jpg" alt="Logo">
                     </div>
                     <div class="infos">
-                        <div class="name"><a class="name" href="#">Prelude Cafe and Restaurant</a></div>
-                        <div class="loc"><a class="loc" href="https://www.google.com/maps/place/810+Castro,+Malate,+Manila,+1004+Metro+Manila/@14.5649701,120.9905822,17z/data=!3m1!4b1!4m6!3m5!1s0x3397c97f49f2da09:0x5be89d0f6b8156e!8m2!3d14.5663182!4d120.9929197!16s%2Fg%2F11f3rgfy9c?entry=ttu">
+                        <div class="name1"><a class="name" href="#">Prelude Cafe and Restaurant</a></div>
+                        <div class="loc2"><a class="loc6" href="https://www.google.com/maps/place/810+Castro,+Malate,+Manila,+1004+Metro+Manila/@14.5649701,120.9905822,17z/data=!3m1!4b1!4m6!3m5!1s0x3397c97f49f2da09:0x5be89d0f6b8156e!8m2!3d14.5663182!4d120.9929197!16s%2Fg%2F11f3rgfy9c?entry=ttu">
                             810 Castro Street, Manila, Philippines</a></div>
                             <p class="rating-prelude">
                                 Rating: <span id="i-prelude" class="i-prelude"> 4.5</span>  out of <span class="total">5</span>
