--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                                 Rating: <span id="i-prelude" class="i-prelude"> 4.5</span>  out of <span class="total">5</span>
                             </p>
                             <p class ="descp">
-                                Feel a cozy atmosphere perfect for enjoying delicious meals and quality time with friends. From their aromatic coffee to their mouthwatering dishes, it's a delightful spot for coffee lovers and food enthusiasts alike.
+                                Feel an atmosphere perfect for enjoying meals and quality time with friends. From their coffee to their mouthwatering dishes, it's a delightful spot for coffee lovers and food enthusiasts alike.
                             </p>
                     </div>
                 </button> 
@@ -419,13 +419,13 @@
                 </div>
                 <div class = "cafe1container" id="cafe1">
                     <button id="view" class="cafe1header"  onclick="showSummary()">
-                        <div class="logo">
+                        <div class="logo-pre">
                             <img src="images/preludelogo.jpg" alt="Logo">
                         </div>
                         <div class="infos">
-                            <div class="name"><a class="name" href="#">Prelude Cafe and Restaurant</a></div>
-                            <div class="loc"><a class="agno" href="https://www.google.com/maps/place/810+Castro,+Malate,+Manila,+1004+Metro+Manila/@14.5649701,120.9905822,17z/data=!3m1!4b1!4m6!3m5!1s0x3397c97f49f2da09:0x5be89d0f6b8156e!8m2!3d14.5663182!4d120.9929197!16s%2Fg%2F11f3rgfy9c?entry=ttu">
-                                810 Castro Street, Manila, Philippines</a></div>
+                            <div class="name1"><a class="name" href="#">Prelude Cafe and Restaurant</a></div>
+                        <div class="loc2"><a class="loc6" href="https://www.google.com/maps/place/810+Castro,+Malate,+Manila,+1004+Metro+Manila/@14.5649701,120.9905822,17z/data=!3m1!4b1!4m6!3m5!1s0x3397c97f49f2da09:0x5be89d0f6b8156e!8m2!3d14.5663182!4d120.9929197!16s%2Fg%2F11f3rgfy9c?entry=ttu">
+                            810 Castro Street, Manila, Philippines</a></div>
                                 <p class="rating-prelude">
                                     Rating: <span id="i-prelude" class="i-prelude"> 5</span>  out of <span class="total">5</span>
                                 </p>
@@ -522,7 +522,7 @@
                                 </a>
                             </div>
                             <p class="rating-drip">
-                                Rating: <span id="i-drip" class="i-drip"> 4</span>  out of <span class="total">5</span>
+                                Rating: <span id="i-drip" class="i-drip"> 4</span>out of <span class="total">5</span>
                             </p>
                             <p class="desct">
                                 A Vietnamese-inspired cafe that is also a minimalist cafe that offers authentic Vietnamese coffee, which is made by letting hot water drip through finely-ground coffee.
@@ -633,8 +633,8 @@
                             <p class="rating-obsecure">
                                 Rating: <span id="i-obsecure" class="i-obsecure"> 3.4</span>  out of <span class="total">5</span>
                             </p>
-                            <p class="descd">
-                                Obscure Cafe in Taft, Manila is a hidden gem known for its unique ambiance and artistic vibe. Step into this charming space for specialty brews, delectable treats, and a touch of mystery.
+                            <p class="desco1">
+                                Obscure Cafe in Taft, Manila is a hidden gem known for its unique ambiance. Step into this charming space for specialty brews, delectable treats, and a touch of mystery.
                             </p>
                         </div>
                     </div>
