--- a/index.html
+++ b/index.html
@@ -943,10 +943,10 @@
                                     <a class="loc3" href="https://www.google.com/maps/place/One+Archers'+Place/@14.5666852,120.9903726,17z/data=!4m10!1m2!2m1!1s1%2FF,+One+Archer+Place,+Taft+Avenue+Corner+Castro+Street,+Manila,+Metro+Manila+Philippines!3m6!1s0x3397c97f4f0cf917:0x67ecb17bc2ebf8ca!8m2!3d14.5666693!4d120.9927121!15sClkxL0YsIE9uZSBBcmNoZXIgUGxhY2UsIFRhZnQgQXZlbnVlIENvcm5lciBDYXN0cm8gU3RyZWV0LCBNYW5pbGEsIE1ldHJvIE1hbmlsYSBQaGlsaXBwaW5lc5IBEmFwYXJ0bWVudF9idWlsZGluZ-ABAA!16s%2Fg%2F11r9xlqtf?entry=ttu">
                                         1/F, One Archer Place, Taft Avenue Corner Castro Street, Manila, Metro Manila Philippines</a>
                                 </div>
-                                <p class="rating-obsecure">
+                                <p class="rating-obsecure2">
                                     Rating: <span id="i-obsecure" class="i-obsecure"> 2</span>  out of <span class="total">5</span>
                                 </p>
-                                <p class="descd">
+                                <p class="descd1">
                                     Obscure Cafe in Taft, Manila is a hidden gem known for its unique ambiance and artistic vibe. Step into this charming space for specialty brews, delectable treats, and a touch of mystery.
                                 </p>
                             </div>
@@ -960,7 +960,7 @@
                                         <a class = "view-all" href="view-establishments.html">View All</a>
                                       </div>
                                       <div class="infos-popup">
-                                        <div class="name-popup"><a class="name" href="#">Obsecure Cafe'</a></div>
+                                        <div class="name-popup"><a class="name" href="#">Obsecure Cafe</a></div>
                                         <div class="loc-popup"><a a class="loc"  href="https://www.google.com/maps/place/One+Archers'+Place/@14.5666852,120.9903726,17z/data=!4m10!1m2!2m1!1s1%2FF,+One+Archer+Place,+Taft+Avenue+Corner+Castro+Street,+Manila,+Metro+Manila+Philippines!3m6!1s0x3397c97f4f0cf917:0x67ecb17bc2ebf8ca!8m2!3d14.5666693!4d120.9927121!15sClkxL0YsIE9uZSBBcmNoZXIgUGxhY2UsIFRhZnQgQXZlbnVlIENvcm5lciBDYXN0cm8gU3RyZWV0LCBNYW5pbGEsIE1ldHJvIE1hbmlsYSBQaGlsaXBwaW5lc5IBEmFwYXJ0bWVudF9idWlsZGluZ-ABAA!16s%2Fg%2F11r9xlqtf?entry=ttu">
                                             1/F, One Archer Place, Taft Avenue Corner Castro Street, Manila, Metro Manila Philippines</a></div>
                                       </div>
