--- a/view-establishments.html
+++ b/view-establishments.html
@@ -19,7 +19,7 @@
             </a>
             <ul>
                 <li id="home-link"><a href="index.html">Home</a></li>
-                <li id="review-link"><a href="review.html">View Establishments</a></li>
+                <li id="view-establishments-link"><a href="view-establishments.html">View Establishments</a></li>
                 <li><a href="login.html">Log In</a></li>
             </ul>            
             <div class="user-icon-container">
@@ -42,12 +42,7 @@
             <button type="submit" class="buttons">Budget Friendly Cafes</button>
             <button type="submit" class="buttons">Study Friendly Cafes</button>
         </div>
-        <img class = "dotsrev" src="images/dots.png">
-        <img class = "dotsrev2" src="images/dots.png">
-        <img class = "dotsrev3" src="images/dots.png">
-        <img class = "dotsrev4" src="images/dots.png">
-        <img class = "dotsrev5" src="images/dots.png">
-        <img class = "dotsrev6" src="images/dots.png">
+ 
         <div class="main">
             <div class="review-box">
                 <div class="unit1" id="unit1-background1">
@@ -137,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <hr class = "divider">
+          
             <div class="review-box">
                 <div class="unit1" id="unit1-background3">
                     <img src="images/obsecurelogo.jpg" class="cafe-profile">
@@ -227,7 +222,7 @@
                     </div>
                 </div>
             </div>
-    <hr class="divider">
+    
             <div class="review-box">
                 <div class="unit1" id="unit1-background5">
                     <img src="images/dripkofilogo.jpg" class="cafe-profile">
