--- a/view-establishments.html
+++ b/view-establishments.html
@@ -23,11 +23,15 @@
                 <li><a href="login.html">Log In</a></li>
             </ul>            
             <div class="user-icon-container">
-                <button class="user-button">
-                    <a href="profile.html">
-                    <img src="images/usericon.png" alt="User Icon" id="icon" class="user">
-                    </a>
-                </button>
+                <div class="dropdown">
+                    <button class="user-button" onclick="toggleDropdown()">
+                        <img src="images/usericon.png" alt="User Icon" id="icon" class="user">
+                    </button>
+                    <div class="dropdown-content" id="dropdownContent">
+                        <a href="sign-up.html">Sign Up</a>
+                        <a href="profile.html">View Profile</a>
+                    </div>
+                </div>
             </div>
         </div>
     <div id="content" class="contents">
